--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 version: "3.9"
+
 services:
   app:
     build: .
     ports:
       - "8501:8501"
     volumes:
-      - ./data:/app/data          # persist data
+      - ./data:/app/data
     env_file:
       - .env
