--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,48 @@
-scrapy
-beautifulsoup4
-requests
-apscheduler
-pandas
-numpy
-scikit-learn
-spacy
-vaderSentiment
-transformers
-sentencepiece
-joblib
-streamlit
-plotly
-python-dotenv
-pytest
+# Web scraping
+scrapy==2.12.0
+beautifulsoup4==4.12.2
+requests==2.31.0
+
+# Scheduling
+apscheduler==3.10.1
+
+# Data processing
+pandas==1.5.3
+numpy==1.23.5
+python-dateutil==2.8.2
+scipy==1.10.1
+ijson>=3.2
 python-dateutil
+
+# Machine learning
+scikit-learn==1.2.2
+joblib==1.2.0
+
+# NLP
+spacy==3.6.1
+nltk==3.8.1
+vaderSentiment==3.3.2
+transformers==4.30.0
+sentencepiece==0.1.99
+wordcloud==1.9.2
+gensim==4.3.1
+
+# Deep learning
+torch==2.0.1
+tensorflow==2.12.0
+
+# Visualization
+streamlit==1.25.0
+plotly==5.15.0
+matplotlib==3.7.1
+seaborn==0.12.2
+
+# Testing
+pytest==7.3.1
+
+# Utilities
+python-dotenv==1.0.0
+tqdm==4.65.0
+pyyaml==6.0
+pyarrow==12.0.1
+lxml==4.9.3
