--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # API Keys (replace with your own)
-NVD_API_KEY="8d17a340-bbc2-41e6-9711-67b32309b361"
+NVD_API_KEY=""
 
 # # Scheduler Settings
 # SCHEDULER_INTERVAL=6  # Default collection interval in hours
@@ -22,4 +22,5 @@ NVD_API_KEY="8d17a340-bbc2-41e6-9711-67b32309b361"
 # # Dashboard Settings
 # DASHBOARD_PORT=8501            # Port for the Streamlit dashboard
 # DEFAULT_THEME="light"          # Dashboard theme (light or dark)
+
 # CACHE_EXPIRY=3600              # Dashboard cache expiry in seconds
